[gd_scene load_steps=4 format=3 uid="uid://yfnrl16fupxk"]

[ext_resource type="PackedScene" uid="uid://d08cf88484t5" path="res://scenes/Characters/projectile_component.tscn" id="1_4fecp"]
[ext_resource type="Script" path="res://scripts/Characters/spell_component.gd" id="1_waidq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rlkgq"]
height = 336.0

[node name="SpellComponent" type="Node2D"]
script = ExtResource("1_waidq")

[node name="ProjectileComponent" parent="." instance=ExtResource("1_4fecp")]

[node name="RangeHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeHitbox"]
position = Vector2(154, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rlkgq")
debug_color = Color(0.690196, 0.482353, 0.356863, 0.419608)

[connection signal="body_entered" from="RangeHitbox" to="." method="_on_range_hitbox_body_entered"]
[connection signal="body_exited" from="RangeHitbox" to="." method="_on_range_hitbox_body_exited"]
